<resources>
    <string name="app_name">My Fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Example fragment</string>
    <string name="long_text">long_text,long_text,long_text,long_text,long_text,long_text,long_text,
        long_text,long_text,long_text,long_text,long_text,long_text,long_text,long_text,long_text,
        long_text,long_text,long_text,long_text,long_text,long_text,long_text,long_text,long_text,
    long_text,long_text,long_text,long_text,long_text,long_text,long_text,long_text,long_text,long_text,
    long_text,long_text,long_text,long_text,long_text,long_text,long_text,long_text,long_text,
    long_text,long_text,long_text,long_text,long_text,long_text,long_text,long_text,long_text,
    long_text,long_text,long_text,long_text,long_text,long_text,long_text,long_text,long_text,
    long_text,long_text,long_text,long_text,long_text,long_text,long_text,long_text,long_text,long_text,
    long_text,long_text,long_text,long_text,long_text,long_text,long_text,long_text,long_text,
    long_text,long_text,long_text,long_text,long_text,long_text,long_text,long_text,long_text,long_text,
    long_text,long_text,long_text,long_text,long_text,long_text,long_text,long_text,long_text,
    long_text,long_text,long_text,long_text,long_text,long_text,long_text,long_text,long_text,
    long_text,long_text,long_text,long_text,long_text,long_text,long_text,long_text,long_text,
    long_text,long_text,long_text,long_text,long_text,long_text,long_text,long_text,long_text,long_text,
    long_text,long_text,long_text,long_text,long_text,long_text,long_text,long_text,long_text,</string>
    <string name="default_image">default image</string>
    <string name="transition_1">transition_1</string>
    <string name="android">Android</string>
    <string name="image_button_small">image_button_small</string>
    <string name="scroll_view">scroll_view</string>
    <string name="tv_android">tv_android</string>
    <string name="send">Send</string>
</resources>